@@ -1,3 +1,9 @@
+2010-09-27  Jiri Novak  <jiri.novak@petriny.net>
+
+	* a patch by Jiri Novak for xml/gama-local-schema.sql and Gkf2sql
+          class to be compatible with Oracle XE 10g, PostgreSQL 8.4,
+	  MySQL 5.1.7 (also suggested by Vaclav Petras) and Sqlite3.
+
 2010-09-10  Ales Cepek  <cepek@gnu.org>
 
 	* added a new class Gkf2sql and a new program gama-local-xml2sql
